--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -19,8 +19,10 @@ repositories {
 }
 
 dependencies {
-	//jpa
+	//jpa and mysql
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
+
 
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
