[Add] 카카오 소셜로그인 구현중
Former-commit-id: 0e29649ad0b443db88e5ab6b94dad39da6170c40

--- a/BackEnd/src/main/resources/application-local.yml
+++ b/BackEnd/src/main/resources/application-local.yml
@@ -19,3 +19,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     generate-ddl: false
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
