--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
 
 
+	//swagger
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
