--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -1,4 +1,17 @@
-spring:
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/todaktodak?serverTimezone=Asia/Seoul
+oauth2:
+  client:
+    registration:
+      kakao:
+        client-id: ${KAKAO_RESTAPI_KEY}
+        client-secret: ${KAKAO_CLIENT_SECRET_KEY}
+        redirect-uri: "http://localhost:8080/login/oauth2/code/{registrationId}"
+        client-authentication-method: POST
+        authorization-grant-type: authorization_code
+        scope: profile_nickname, account_email #동의 항목
+        client-name: Kakao
+    provider:
+      kakao:
+        authorization-uri: https://kauth.kakao.com/oauth/authorize
+        token-uri: https://kauth.kakao.com/oauth/token
+        user-info-uri: https://kapi.kakao.com/v2/user/me
+        user-name-attribute: id
