[Add] Auth 소셜회원가입 완료 로그인은 jwt관리제외하고 완료
Former-commit-id: 9ee7726543a41c0e18a6c12257cda1744809cec3

--- a/BackEnd/src/main/resources/application-local.yml
+++ b/BackEnd/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     database: mysql
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       naming:
         strategy: org.hibernate.cfg.ImprovedNamingStrategy
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
