--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -19,10 +19,20 @@ repositories {
 }
 
 dependencies {
+	// jwt
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
+	// log
+	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+
 	//jpa and mysql
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
 
+	//gson
+	implementation'com.google.code.gson:gson:2.8.7'
 
 	//swagger
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
@@ -34,6 +44,8 @@ dependencies {
 	//oauth2 and security
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-core:5.5.1'
+
 
 	//spring web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
