[Add] baby정보 조회, jwt회원로그인 수정필요
Former-commit-id: dc81e024d58a9cad9ea31d9803d7594ae2807754

--- a/BackEnd/src/main/resources/application-local.yml
+++ b/BackEnd/src/main/resources/application-local.yml
@@ -18,7 +18,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-    generate-ddl: false
+    generate-ddl: true
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
