--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -19,6 +19,8 @@ repositories {
 }
 
 dependencies {
+	//configuration
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	// jwt
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
