--- a/front/pubspec.yaml
+++ b/front/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mqtt_client: ^9.3.1
   ndialog: ^4.1.0
   image: ^3.0.2
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
