--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ sonarqube-check:
     key: "${CI_JOB_NAME}"
     paths:
       - .sonar/cache
-  script: gradle sonarqube -Dsonar.qualitygate.wait=true
+  script: sonar-scanner.bat -D"sonar.projectKey=S08P31B202" -D"sonar.sources=." -D"sonar.host.url=https://sonarqube.ssafy.com" -D"sonar.login=0f90fc8bedace6e393e89c909dcce2c979db8a9a"
   allow_failure: true
   rules:
     - if: $CI_COMMIT_REF_NAME == 'develop' || $CI_PIPELINE_SOURCE == 'merge_request_event'
