Update .gitlab-ci.yml file
Former-commit-id: 1c9f8f14d616e2265d5ed03f143fb3e0de1c663f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ stages:          # List of stages for jobs, and their order of execution
   - deploy
 
 sonarqube-check:
+  stage: test
   image:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [""]
