[Update] db 배포 설정 변경
Former-commit-id: 581b4fb30ff8fef1242869ce275da1d98b8cd665

--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+spring:
+  profiles:
+    active : ${ACTIVE}
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 oauth2:
   client:
     registration:
