--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
