--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -62,6 +62,11 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	// openvidu
+	// https://mvnrepository.com/artifact/io.openvidu/openvidu-java-client
+	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.26.0'
+
 }
 
 tasks.named('test') {
