Add: OPENVIDO_URL 추가
Former-commit-id: 1198bf8bb62c30b5b83150faee6fb4d0407ec7be

--- a/BackEnd/src/main/resources/application-prod.yml
+++ b/BackEnd/src/main/resources/application-prod.yml
@@ -21,3 +21,5 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
+OPENVIDU_URL: https://todaktodak.kr:8443/
+OPENVIDU_SECRET: noinjung
