[Update] 유저 정보 수정, 유저정보 조회 완료, 회원가입 시 디바이스 자동생성, 로그인 시 아기 정보 디바이스 정보 리스트로 한번에 뽑아오는 작업 중
Former-commit-id: bdbea6d1260f423b0336a75609087428de623a6f

--- a/BackEnd/src/main/resources/application-local.yml
+++ b/BackEnd/src/main/resources/application-local.yml
@@ -19,3 +19,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     generate-ddl: true
+
+OPENVIDU_URL: https://todaktodak.kr:8443/
+OPENVIDU_SECRET: noinjung
