--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -52,6 +52,16 @@ cloud:
     profiles:
       include: Administrator
 
+
+  server:
+    ssl:
+      key-store: classpath:keystore.p12
+      key-store-type: PKCS12
+      key-store-password: ${KEY_STORE_PASSWORD}
+      key-alias: ${KEY_ALIAS}
+    port: 9090
+    http2:
+      enabled: true
 s3-default-image : ${S3_DEFAULT_IMAGE}
 s3-baby-default-image : ${S3_BABY_IMAGE}
 s3-user-default-image : ${S3_USER_IMAGE}
