--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "engines": {
     "node": "16.20.0",
-    "npm": "8.19.4"},
+    "npm": "8.19.4"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
