--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -55,7 +55,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-sw": "http-server ./build"
   },
   "eslintConfig": {
     "extends": [
@@ -76,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "http-server": "^14.1.1",
     "tailwindcss": "^3.3.2"
   }
 }
