--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,8 @@
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "@teachablemachine/image": "^0.8.5",
+    "@tensorflow/tfjs": "^4.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
