Add: feat device with tmImage
teachable machine image 예측 #7


Former-commit-id: f1ec811458fcc8b36ac268f9c98c21a7be4d82ac

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,7 @@
     "aws-amplify": "^5.2.0",
     "aws-iot-device-sdk": "^2.2.12",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "chartjs": "^0.3.24",
     "chartjs-plugin-datalabels": "^2.2.0",
     "firebase": "^9.21.0",
