--- a/FrontEnd/public/manifest.json
+++ b/FrontEnd/public/manifest.json
@@ -18,9 +18,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "public/index.html",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
-  "prefer_related_applications": true
+  "background_color": "#ffffff"
 }
