[Update] fcm 알람 세팅 및 독커파일 수정
Former-commit-id: d89cb1403f7da0577df6c76fb3e6c5a110d315e2

--- a/BackEnd/Dockerfile
+++ b/BackEnd/Dockerfile
@@ -1,9 +1,21 @@
+# Build Stage
+FROM adoptopenjdk/openjdk11 AS build
+
+WORKDIR /app
+
+# 앱 실행에 필요한 파일 복사
+COPY /home/ubuntu/todaktodak-6846e-firebase-adminsdk-v719d-f41e0aa4e9.json /app/src/main/resources/
+
+# 앱 소스 코드 복사 및 빌드
+COPY . .
+RUN ./gradlew build
+
+# Run Stage
 FROM adoptopenjdk/openjdk11
 
-ARG JAR_FILE=build/libs/backend-0.0.1-SNAPSHOT.jar
+WORKDIR /app
 
-COPY ${JAR_FILE} app.jar
+# Build Stage에서 빌드한 JAR 파일 복사
+COPY --from=build /app/build/libs/app.jar .
 
-EXPOSE 8080
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+CMD ["java", "-jar", "app.jar"]
