--- a/BackEnd/src/main/resources/application-local.yml
+++ b/BackEnd/src/main/resources/application-local.yml
@@ -42,3 +42,8 @@ oauth2:
 
 OPENVIDU_URL: https://todaktodak.kr:8443/
 OPENVIDU_SECRET: noinjung
+fcm:
+  key:
+    path: ${FCM_KEY_LOCATION}
+    scope: https://www.googleapis.com/auth/cloud-platform
+    project-id: ${FCM_PROJECT_ID}
