[Update] Redis 설정, refreshToken 재발급 로직
Former-commit-id: a7605851cb9b190defc3258d3153c9afde58d2c2

--- a/BackEnd/build.gradle
+++ b/BackEnd/build.gradle
@@ -20,6 +20,8 @@ repositories {
 }
 
 dependencies {
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	//FCM
 	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '6.8.1'
 	implementation 'com.squareup.okhttp3:okhttp:3.10.0'
