--- a/BackEnd/src/main/resources/application.yml
+++ b/BackEnd/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     multipart:
       maxFileSize: 10MB
       maxRequestSize: 30MB
+  redis:
+    host: todaktodak.kr
+    post: 6379
+    password: ${REDIS_PASSWORD}
 
 
   jackson:
@@ -35,13 +39,6 @@ cloud:
       include: Administrator
 
 
-#server:
-#  ssl:
-#    key-store: classpath:keystore.p12
-#    key-store-type: PKCS12
-#    key-store-password: ${KEY_STORE_PASSWORD}
-#    key-alias: ${KEY_ALIAS}
-#  port: 443
   http2:
     enabled: true
 s3-default-image : ${S3_DEFAULT_IMAGE}
