--- a/BackEnd/src/main/resources/application-prod.yml
+++ b/BackEnd/src/main/resources/application-prod.yml
@@ -27,7 +27,7 @@ oauth2:
       kakao:
         client-id: ${KAKAO_RESTAPI_KEY}
         client-secret: ${KAKAO_CLIENT_SECRET_KEY}
-        redirect-uri: http://localhost:3000/api/login/oauth2/code/
+        redirect-uri: ${KAKAO_REDIRECT_URI}
         client-authentication-method: POST
         authorization-grant-type: authorization_code
         scope:
