[Update] 로그인 인증 분기처리
Former-commit-id: 2df391e777e955c14f4575f791883512450da132

--- a/BackEnd/src/main/resources/application-prod.yml
+++ b/BackEnd/src/main/resources/application-prod.yml
@@ -27,7 +27,8 @@ oauth2:
       kakao:
         client-id: ${KAKAO_RESTAPI_KEY}
         client-secret: ${KAKAO_CLIENT_SECRET_KEY}
-        redirect-uri: ${KAKAO_REDIRECT_URI}
+        redirect-uri1: ${KAKAO_REDIRECT_URI1}
+        redirect-uri2: ${KAKAO_REDIRECT_URI2}
         client-authentication-method: POST
         authorization-grant-type: authorization_code
         scope:
